# httplint

./: .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  Makefile.pyproject  README.md  TRANSLATION.md  pyproject.toml  requirements.txt  setup.cfg
.antigravity/: rules.md
.github/workflows/: publish.yml  test.yml
httplint/: __init__.py  cache.py  charset.py  cli.py  cli_http_parser.py  content_encoding.py  content_type.py  field_section.py  i18n.py  message.py  note.py  request.py  response.py  status.py  type.py  types.py  util.py
httplint/cli/: __init__.py  http_parser.py
httplint/field/: README.md  __init__.py  broken_field.py  cors.py  deprecated.py  description.py  finder.py  json_field.py  list_field.py  notes.py  section.py  singleton_field.py  structured_field.py  tests.py  unnecessary.py  utils.py
httplint/field/parsers/: __init__.py  accept.py  accept_ch.py  accept_encoding.py  accept_language.py  accept_patch.py  accept_post.py  accept_query.py  accept_ranges.py  access_control.py  access_control_allow_credentials.py  access_control_allow_headers.py  access_control_allow_methods.py  access_control_allow_origin.py  access_control_expose_headers.py  access_control_max_age.py  access_control_request_headers.py  access_control_request_method.py  age.py  allow.py  alt_svc.py  authentication_info.py  authorization.py  available_dictionary.py  cache_control.py  cache_group_invalidation.py  cache_groups.py  cache_status.py  cdn_cache_control.py  clear_site_data.py  connection.py  connectiox.py  content_base.py  content_disposition.py  content_encoding.py  content_language.py  content_length.py  content_location.py  content_md5.py  content_range.py  (+73 more)
httplint/fields/: README.md  __init__.py  _deprecated.py  _field.tpl  _finder.py  _notes.py  _test.py  _utils.py  accept_ranges.py  age.py  allow.py  cache_control.py  connection.py  connectiox.py  content_base.py  content_disposition.py  content_encoding.py  content_language.py  content_length.py  content_location.py  content_md5.py  content_range.py  content_transfer_encoding.py  content_type.py  cteonnt_length.py  date.py  etag.py  expires.py  keep_alive.py  last_modified.py  link.py  location.py  mime_version.py  p3p.py  pragma.py  proxy_authenticate.py  retry_after.py  server.py  set_cookie.py  set_cookie2.py  (+19 more)
httplint/syntax/: __init__.py  rfc3986.py  rfc5234.py  rfc5322.py  rfc5646.py  rfc5987.py  rfc5988.py  rfc7230.py  rfc7231.py  rfc7232.py  rfc7233.py  rfc7234.py  rfc7235.py  rfc8288.py  rfc9110.py  rfc9111.py  rfc9112.py  rfc9651.py
httplint/translations/: messages.pot
httplint/translations/es/LC_MESSAGES/: messages.mo  messages.po
httplint/translations/fr/LC_MESSAGES/: messages.mo  messages.po
httplint/translations/ja/LC_MESSAGES/: messages.mo  messages.po
httplint/translations/zh/LC_MESSAGES/: messages.mo  messages.po
test/: coverage.py  http-fields.xml  smoke.py  syntax.py  test_cache.py  test_charset.py  test_content_encoding.py  test_cors.py  test_description.py  test_dictionary_transport.py  test_duplicate_keys.py  test_fields.py  test_i18n.py  test_message.py  test_no_content.py  test_note_escaping.py  test_notes.py  test_pickle.py  test_status.py  test_syntax.py  test_thread_safety.py  test_unnecessary.py  update_readme.py  utils.py
tools/: check_detail_escaping.py  update_readme.py
tools/i18n/: TRANSLATION.md  apply.py  autotranslate.py  babel.cfg  check.py  extract.py  extractors.py
tools/i18n/data/: messages.pot  translations.json
