[project]
name = "httplint"
dynamic = ["version"]
authors = [
    {name="Mark Nottingham", email="mnot@mnot.net"}
]
description = "Lint for HTTP messages."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.md"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]

dependencies = [
    "Markdown",
    "MarkupSafe",
    "thor",
    "typing_extensions",
    "http-sf>=1.2.0",
    "sniffpy==1.0.0",
    "Babel",
    "Brotli",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "pylint",
    "pytest",
    "pytest-md",
    "validate-pyproject",
    "build",
    "twine",
    "types-Markdown",
    "brotli-stubs",
]
i18n = [
    "llm",
    "llm-mlx",
]

[project.urls]
homepage = "https://github.com/mnot/httplint/"

[project.scripts]
httplint = "httplint.cli:main"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "httplint.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["httplint", "httplint.*"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
httplint = ["py.typed", "translations/**/*"]

[tool.mypy]
strict = true
show_error_codes = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.pylint.basic]
function-rgx = "[a-z_][a-z0-9_]{1,30}$"
variable-rgx = "[a-z_][a-z0-9_]{1,30}$"
attr-rgx = "[a-z_][a-z0-9_]{1,30}$"
argument-rgx = "[a-z_][a-z0-9_]{1,30}$"
class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{1,30}|(__.*__))$"
method-rgx = "[a-z_][a-z0-9_]{1,30}$"
class-rgx = "[a-zA-Z0-9_]+$"

[tool.pylint.messages_control]
disable = "C0114,C0103,C0115,C0116,W0613,W0707,R0903"

[tool.pylint.reports]
reports = false

[tool.pylint.variables]
dummy-variables-rgx = "_"

[tool.pylint.design]
max-args=10
max-positional-arguments=10
max-locals=35
max-branches=25
max-statements=100
max-attributes=40
max-returns=8
min-public-methods=1

[tool.pylint.similarities]
min-similarity-lines = 20

[tool.pytest.ini_options]
python_classes = "*Test"
python_files = ["message.py", "util.py", "field/parsers/*.py", "content_type.py", "test/test_*.py"]

[tool.black]
line-length = 100
