[project]
name = "httplint"
dynamic = ["version"]
authors = [
    {name="Mark Nottingham", email="mnot@mnot.net"}
]
description = "Lint for HTTP messages."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.md"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]

dependencies = [
    "Markdown",
    "MarkupSafe",
    "thor",
    "typing_extensions",
    "http-sf>=1.2.1",
    "sniffpy==1.0.0",
    "Babel",
    "Brotli",
    "chardet",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "isort",
    "pylint",
    "pytest",
    "pytest-md",
    "validate-pyproject",
    "build",
    "twine",
    "types-Markdown",
    "brotli-stubs",
]
i18n = [
    "llm",
    "llm-mlx",
]

[project.urls]
homepage = "https://github.com/mnot/httplint/"

[project.scripts]
httplint = "httplint.cli:main"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "httplint.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["httplint", "httplint.*"]
exclude = ["build", "test", "tools"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
httplint = ["py.typed", "translations/**/*"]

[[tool.mypy.overrides]]
module = "sniffpy"
ignore_missing_imports = true

[tool.pytest.ini_options]
python_classes = "*Test"
python_files = ["message.py", "util.py", "field/parsers/*.py", "content_type.py", "test/test_*.py"]

[tool.black]
line-length = 100

