[metadata]
name = httplint
version = attr: httplint.__version__
author = Mark Nottingham
author_email = mnot@mnot.net
description = Lint for HTTP messages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://redbot.org/project/
project_urls =
    Bug Tracker = https://github.com/mnot/httplint/issues
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Testing
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    License :: OSI Approved :: MIT License

[options]
package_dir =
    redbot = httplint
packages = find:
python_requires = >=3.7



